All lesons linked and updated. Issue with audio running when closed section sorted in script.js

--- a/files/lessons_overview.html
+++ b/files/lessons_overview.html
@@ -95,21 +95,130 @@
                 <div class="menu-link-title">Lesson 10:<br/>Drive Train Operation and Maintenance Contents</div>
             </div>
             <!-- Lesson 11 -->
+            <div class="menu-grid-item">
+                <a href="lessons_pages/Lesson 11_Drive Train_Transmission Operation and Maintenance/lesson_11.html" class="menu-link">
+                    <img src="link_assets/jd_wheel.png" alt="Lesson 11" class="link-image wheel">
+                </a>
+                <div class="menu-link-title">Lesson 11:<br/>Drive Train - Transmission Operation and Maintenance</div>
+            </div>
             <!-- Lesson 12 -->
+            <div class="menu-grid-item">
+                <a href="lessons_pages/Lesson 12_Drive Train_MFWD and Front Axle Operation and Maintenance/lesson_12.html" class="menu-link">
+                    <img src="link_assets/jd_wheel.png" alt="Lesson 12" class="link-image wheel">
+                </a>
+                <div class="menu-link-title">Lesson 12:<br/>Drive Train - MFWD and Front Axle Operation and Maintenance</div>
+            </div>
             <!-- Lesson 13 -->
+            <div class="menu-grid-item">
+                <a href="lessons_pages/Lesson 13_Drive Train_Differential and Rear Axle Operation and Maintenance/lesson_13.html" class="menu-link">
+                    <img src="link_assets/jd_wheel.png" alt="Lesson 13" class="link-image wheel">
+                </a>
+                <div class="menu-link-title">Lesson 13:<br/>Drive Train - Differential and Rear Axle Operation and Maintenance</div>
+            </div>
             <!-- Lesson 14 -->
+            <div class="menu-grid-item">
+                <a href="lessons_pages/Lesson 14_Drive Train_Power Take Off (PTO) Operation and maintenance/lesson_14.html" class="menu-link">
+                    <img src="link_assets/jd_wheel.png" alt="Lesson 14" class="link-image wheel">
+                </a>
+                <div class="menu-link-title">Lesson 14:<br/>Drive Train - Power Take Off (PTO) Operation and maintenance</title>
+                </div>
+            </div>
             <!-- Lesson 15 -->
+            <div class="menu-grid-item">
+                <a href="lessons_pages/Lesson 15_Steering and Brake Operation and Maintenance/lesson_15.html" class="menu-link">
+                    <img src="link_assets/jd_wheel.png" alt="Lesson 15" class="link-image wheel">
+                </a>
+                <div class="menu-link-title">Lesson 15:<br/>Steering and Brake Operation and Maintenance</title>
+                </div>
+            </div>
             <!-- Lesson 16 -->
+            <div class="menu-grid-item">
+                <a href="lessons_pages/Lesson 16_Hydraulics Operation and Maintenance/lesson_16.html" class="menu-link">
+                    <img src="link_assets/jd_wheel.png" alt="Lesson 16" class="link-image wheel">
+                </a>
+                <div class="menu-link-title">Lesson 16:<br/>Hydraulics Operation and Maintenance</title>
+                </div>
+            </div>
             <!-- Lesson 17 -->
+            <div class="menu-grid-item">
+                <a href="lessons_pages/Lesson 17_Hitch and Drawbar Operation and Maintenance/lesson_17.html" class="menu-link">
+                    <img src="link_assets/jd_wheel.png" alt="Lesson 17" class="link-image wheel">
+                </a>
+                <div class="menu-link-title">Lesson 17:<br/>Hitch and Drawbar Operation and Maintenance</title>
+                </div>
+            </div>
             <!-- Lesson 18 -->
+            <div class="menu-grid-item">
+                <a href="lessons_pages/Lesson 18_Selective Control Valve Operation and Maintenance/lesson_18.html" class="menu-link">
+                    <img src="link_assets/jd_wheel.png" alt="Lesson 18" class="link-image wheel">
+                </a>
+                <div class="menu-link-title">Lesson 18:<br/>Selective Control Valve Operation and Maintenance</title>
+                </div>
+            </div>
             <!-- Lesson 19 -->
+            <div class="menu-grid-item">
+                <a href="lessons_pages/Lesson 19_Additional Equipment Operation and Maintenace/lesson_19.html" class="menu-link">
+                    <img src="link_assets/jd_wheel.png" alt="Lesson 19" class="link-image wheel">
+                </a>
+                <div class="menu-link-title">Lesson 19:<br/>Additional Equipment Operation and Maintenace</title>
+                </div>
+            </div>
             <!-- Lesson 20 -->
+            <div class="menu-grid-item">
+                <a href="lessons_pages/Lesson 20_Operator Station Operation and Maintenance/lesson_20.html" class="menu-link">
+                    <img src="link_assets/jd_wheel.png" alt="Lesson 20" class="link-image wheel">
+                </a>
+                <div class="menu-link-title">Lesson 20:<br/>Operator Station Operation and Maintenace</title>
+                </div>
+            </div>
             <!-- Lesson 21 -->
+            <div class="menu-grid-item">
+                <a href="lessons_pages/Lesson 21_Wheels and Tires Maintenance/lesson_21.html" class="menu-link">
+                    <img src="link_assets/jd_wheel.png" alt="Lesson 21" class="link-image wheel">
+                </a>
+                <div class="menu-link-title">Lesson 21:<br/>Wheels and Tires Maintenance</title>
+                </div>
+            </div>
             <!-- Lesson 22 -->
+            <div class="menu-grid-item">
+                <a href="lessons_pages/Lesson 22_Ballasting Maintenance/lesson_22.html" class="menu-link">
+                    <img src="link_assets/jd_wheel.png" alt="Lesson 22" class="link-image wheel">
+                </a>
+                <div class="menu-link-title">Lesson 22:<br/>Ballasting Maintenance</title>
+                </div>
+            </div>
             <!-- Lesson 23 -->
+            <div class="menu-grid-item">
+                <a href="lessons_pages/Lesson 23_Troubleshooting/lesson_23.html" class="menu-link">
+                    <img src="link_assets/jd_wheel.png" alt="Lesson 23" class="link-image wheel">
+                </a>
+                <div class="menu-link-title">Lesson 23:<br/>Troubleshooting</title>
+                </div>
+            </div>
             <!-- Lesson 24 -->
+            <div class="menu-grid-item">
+                <a href="lessons_pages/Lesson 24_Maintenace Intervals and Records/lesson_24.html" class="menu-link">
+                    <img src="link_assets/jd_wheel.png" alt="Lesson 24" class="link-image wheel">
+                </a>
+                <div class="menu-link-title">Lesson 24:<br/>Maintenace Intervals and Records</title>
+                </div>
+            </div>
             <!-- Lesson 25 -->
+            <div class="menu-grid-item">
+                <a href="lessons_pages/Lesson 25_Service Maintenance/lesson_25.html" class="menu-link">
+                    <img src="link_assets/jd_wheel.png" alt="Lesson 25" class="link-image wheel">
+                </a>
+                <div class="menu-link-title">Lesson 25:<br/>Service Maintenace</title>
+                </div>
+            </div>
             <!-- Lesson 26 -->
+            <div class="menu-grid-item">
+                <a href="lessons_pages/Lesson 26_Specifications/lesson_26.html" class="menu-link">
+                    <img src="link_assets/jd_wheel.png" alt="Lesson 26" class="link-image wheel">
+                </a>
+                <div class="menu-link-title">Lesson 26:<br/>Specifications</title>
+                </div>
+            </div>
         </div>
         <!-- End of menu-grid -->
     </div>
