--- a/files/lessons_pages/Lesson 15_Steering and Brake Operation and Maintenance/lesson_15.html
+++ b/files/lessons_pages/Lesson 15_Steering and Brake Operation and Maintenance/lesson_15.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 <!-- === CHANGE HTML Title === -->
-    <title>Lesson 10: Drive Train - Operation and Maintenance Contents</title>
+    <title>Lesson 15: Steering and Brake Operation and Maintenance</title>
 
 <!-- Path: Up THREE levels from files/lessons/lesson_XX/ to root, then into css/ -->
     <link rel="stylesheet" href="../../../css/styles.css">
@@ -22,7 +22,7 @@
     </div>
 
 <!-- === CHANGE Lesson Title Text === -->
-    <h1 class="page-header">Lesson 10:<br/>Drive Train - Operation and Maintenance Contents</h1>
+    <h1 class="page-header">Lesson 15:<br/>Steering and Brake Operation and Maintenance</h1>
     
     <!-- Wrapper for lesson elements -->
     <div class="lesson-content-container">
@@ -32,7 +32,7 @@
             <h2>The Podcast</h2>
 
 <!-- === CHANGE MP3 Filename === -->
-            <audio controls src="10_29_JDS5M_Drive Train Operation and Maintenance_CONTENTS_Podcast.mp3">
+            <audio controls src="15_34_JDS5M_Steering and Brake Operation and Maintenance.mp3">
             </audio>
 
         </div>
@@ -42,7 +42,7 @@
             <h2>The PDF Manual</h2>
 
 <!-- === CHANGE PDF Filename / No app layout: #view=FitH&toolbar=0&navpanes=0 === -->
-            <embed src="10_29_JDS5M_Drive Train Operation and Maintenance_CONTENTS_(1, 1pg).pdf#view=FitH&toolbar=0&navpanes=0" type="application/pdf">
+            <embed src="15_34_JDS5M_Steering and Brake Operation and Maintenance.pdf#view=FitH&toolbar=0&navpanes=0" type="application/pdf">
             </embed>
 
         </div>
