--- a/index.html
+++ b/index.html
@@ -22,7 +22,16 @@
                     <img src="files/link_assets/jd_tractor.png" alt="CAB CONTROLS INTERACTION" class="link-image tractor">
                  </a>
                 <div class="menu-link-title">CAB CONTROLS INTERACTION</div>
-            </div>             
+            </div>
+         
+            <div class="menu-grid-item ">
+                <a href="files/maps_pages/maps_review.html" class="menu-link">
+                    <img src="files/link_assets/map.png" alt="HARINGEY´S PARKS MAP" class="link-image tractor">
+                </a>
+                <div class="menu-link-title">HARINGEY´S PARKS MAP</div>
+            </div>
+        
+
             <div class="menu-grid-item ">
                 <a href="files/lessons_overview.html" class="menu-link">
                     <img src="files/link_assets/jd_tractor.png" alt="OPERATOR´S MANUAL LESSONS" class="link-image tractor">
