Parks images and pages updated. Module finished

--- a/index.html
+++ b/index.html
@@ -13,16 +13,16 @@
 <body class="content-page">
 
     <!-- Consistent Header -->
-    <h1 class="page-header">John Deere Tractor Series 5M - Operator Interactive Training</h1>
+    <h1 class="page-header">Interactive Training</h1>
     <div class="container-grid">
-        <h2>Select a Learning Module:</h2>
+        <h2>Select a Module:</h2>
         <div class="menu-grid">
           
             <div class="menu-grid-item ">
                 <a href="files/maps_pages/maps_review.html" class="menu-link">
                     <img src="files/link_assets/map.png" alt="HARINGEY´S PARKS MAP" class="link-image tractor">
                 </a>
-                <div class="menu-link-title">PARKS DOCUMENTS</div>
+                <div class="menu-link-title">PARKS</div>
             </div>        
 
             <div class="menu-grid-item ">
